--- a/css/default.css
+++ b/css/default.css
@@ -16,8 +16,8 @@ div.leftright {
 }
 
 #covering {
-	order: 2;
-	width: 10em;
+	float: right;
+	height: 40ex;
 }
 
 div#menu {
@@ -65,7 +65,8 @@ div.talktitle {
     font-style: italic;
     margin-top: 1ex;
     margin-left: 3ex;
-    
+    margin-bottom: 1ex;
+
 }
 
 #boysurface {
@@ -73,8 +74,11 @@ div.talktitle {
 	height: 20ex;
 }
 
+#bulb {
+  height: 20ex;
+}
+
 #myphoto {
-	order: 2;
 	height: 27ex;
 }
 
